@@ -130,7 +130,7 @@ subtest 'variadic' => sub {
   my $ffi = FFI::Platypus->new;
   $ffi->lib($libtest);
 
-  plan skip_all => 'test requires variadic function support'
+  skip_all 'test requires variadic function support'
     unless eval { $ffi->function('variadic_return_arg' => ['int'] => ['int'] => 'int') };
 
 
