@@ -10,7 +10,7 @@ use FFI::CheckLib;
 use Data::Dumper qw( Dumper );
 
 BEGIN {
-  plan skip_all => 'Test requires support for double complex'
+  skip_all 'Test requires support for double complex'
     unless FFI::Platypus::TypeParser->have_type('complex_double');
 }
 
@@ -46,7 +46,7 @@ foreach my $api (0, 1, 2)
       };
 
       subtest 'with Math::Complex' => sub {
-        plan skip_all => 'test requires Math::Complex'
+        skip_all 'test requires Math::Complex'
           unless eval q{ use Math::Complex (); 1 };
         my $c = Math::Complex->make(10.5, 20.5);
         note "to_string(\$c) = ", to_string($c);
@@ -73,7 +73,7 @@ foreach my $api (0, 1, 2)
       };
 
       subtest 'with Math::Complex' => sub {
-        plan skip_all => 'test requires Math::Complex'
+        skip_all 'test requires Math::Complex'
           unless eval q{ use Math::Complex (); 1 };
         my $c = Math::Complex->make(10.5, 20.5);
         note "to_string(\$c) = ", to_string($c);
@@ -88,7 +88,7 @@ foreach my $api (0, 1, 2)
       };
 
       subtest 'values set on out (object)' => sub {
-        plan skip_all => 'test requires Math::Complex'
+        skip_all 'test requires Math::Complex'
           unless eval q{ use Math::Complex (); 1 };
         my $c = Math::Complex->make(0.0, 0.0);
         complex_set(\$c, 1.0, 2.0);
